--- a/indexProduction.html
+++ b/indexProduction.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <title>ReasonReact Examples</title>
   <link rel="stylesheet" href="./index.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+      integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
+      crossorigin="anonymous"
+    />
 </head>
 <body>
   <div id="root"></div>
